--- a/index.html
+++ b/index.html
@@ -8,6 +8,121 @@
     <title>Manage</title>
 </head>
 <body>
-    
+    <header>
+        <img src="img/logo.svg" alt="logo">
+        <ul>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Community</a></li>
+        </ul>
+        <button class="cta_getStarted">Get Started</button>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div>
+                <h2>Bring everyone together to build better products.</h2>
+                <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the large team goals in view </p>
+                <button class="cta_getStarted">Get Started</button>
+            </div>
+            <img src="img/illustration-intro.svg" alt="illustration-intro">
+        </section>
+
+        <section class="aboutUs">
+            <div class="description">
+                <h3>What´s different about Manage? </h3>
+                <p>Manage provides all the functionality your
+                    teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
+            </div>
+            <div class="itemlist">
+                <div class="item">
+                    <div>
+                        <span>01</span>
+                    </div>
+                    <div>
+                        <h4>Track company-wide progress</h4>
+                        <p>See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div>
+                        <span>02</span>
+                    </div>
+                    <div>
+                        <h4>Advance built-in reports</h4>
+                        <p>Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div>
+                        <span>03</span>
+                    </div>
+                    <div>
+                        <h4>Everything you need in one place</h4>
+                        <p>Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimony">
+            <h3>What they´ve said</h3>
+            <div class="cardlist">
+                <div class="card">
+                    <img src="img/avatar-anisha.png" alt="avatar-anisha">
+                    <h5>Anisha Li</h5>
+                    <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                </div>
+                <div class="card">
+                    <img src="img/avatar-ali.png" alt="avatar-ali">
+                    <h5>Ali Bravo</h5>
+                    <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
+                </div>
+                <div class="card">
+                    <img src="img/avatar-richard.png" alt="avatar-richard">
+                    <h5>Richard Watts</h5>
+                    <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
+                </div>
+            </div>
+            <button class="cta_getStarted">Get Started</button>
+        </section>
+
+        <section class="banner">
+            <h2>Simplify hoy your team words today.</h2>
+            <button class="cta_getStarted">Get Started</button>
+        </section>
+    </main>
+    <footer>
+            <div class="iconList">
+                <img src="img/footer-logo.svg" alt="logo">
+                <div>
+                    <img src="img/icon-facebook.svg" alt="facebook">
+                    <img src="img/icon-youtube.svg" alt="youtube">
+                    <img src="img/icon-twitter.svg" alt="twitter">
+                    <img src="img/icon-pinterest.svg" alt="pinterest">
+                    <img src="img/icon-instagram.svg" alt="instagram">
+                </div>
+            </div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Pircing</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Carrers</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+            <div class="form_copy">
+                <form action="">
+                    <input type="email" name="email" id="email" placeholder="Updates in yout inbox...">
+                    <button type="submit">Go</button>
+                </form>
+                <p>Copyright 2020. All Rights Reserved</p>
+            </div>
+    </footer>
 </body>
 </html>
