--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <section class="banner">
             <h2>Simplify hoy your team words today.</h2>
-            <button class="cta_getStarted">Get Started</button>
+            <button class="cta_getStarted2">Get Started</button>
         </section>
     </main>
     <footer>
