--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section class="aboutUs">
             <div class="description">
-                <h3>What´s different about Manage? </h3>
+                <h3>What's different about Manage? </h3>
                 <p>Manage provides all the functionality your
                     teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
             </div>
@@ -68,7 +68,7 @@
         </section>
 
         <section class="testimony">
-            <h3>What they´ve said</h3>
+            <h3>What they've said</h3>
             <div class="cardlist">
                 <div class="card">
                     <img src="img/avatar-anisha.png" alt="avatar-anisha">
