sumando partes responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Community</a></li>
         </ul>
-        <button class="cta_getStarted"><a href="#">Started</a></button>
+        <button class="cta_getStarted">Started</button>
         <img class="bars" src="img/bars-solid.svg" alt="">
     </header>
 
