sumando partes responsive

--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Manage</title>
 </head>
 <body>
     <header>
         <img src="img/logo.svg" alt="logo">
-        <ul>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Community</a></li>
-        </ul>
-        <button class="cta_getStarted">Started</button>
+        <nav>
+            <ul>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Community</a></li>
+            </ul>
+        </nav>
+        <button class="cta_getStarted">Get Started</button>
         <img class="bars" src="img/bars-solid.svg" alt="">
     </header>
 
@@ -99,11 +102,11 @@
             <div class="iconList">
                 <img src="img/footer-logo.svg" alt="logo">
                 <div>
-                    <img src="img/icon-facebook.svg" alt="facebook">
-                    <img src="img/icon-youtube.svg" alt="youtube">
-                    <img src="img/icon-twitter.svg" alt="twitter">
-                    <img src="img/icon-pinterest.svg" alt="pinterest">
-                    <img src="img/icon-instagram.svg" alt="instagram">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
                 </div>
             </div>
             <ul>
