sumando partes responsive

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="card">
                     <img src="img/avatar-anisha.png" alt="avatar-anisha">
                     <h5>Anisha Li</h5>
-                    <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                    <p>“Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
                 </div>
                 <div class="card">
                     <img src="img/avatar-ali.png" alt="avatar-ali">
@@ -87,7 +87,7 @@
                 <div class="card">
                     <img src="img/avatar-richard.png" alt="avatar-richard">
                     <h5>Richard Watts</h5>
-                    <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
+                    <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can't stop recommending them to everyone i talk to!”</p>
                 </div>
             </div>
             <button class="cta_getStarted">Get Started</button>
@@ -125,10 +125,8 @@
                     <input type="email" name="email" id="email" placeholder="Updates in yout inbox...">
                     <button type="submit">Go</button>
                 </form>
-                
-            </div>
-            
+                <p>Copyright 2020. All Rights Reserved</p>
+            </div>  
     </footer>
-    <p>Copyright 2020. All Rights Reserved</p>
 </body>
 </html>
