Terminar Footer Responsive

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         </section>
     </main>
     <footer>
+        <div class="container">
             <div class="iconList">
                 <img src="img/footer-logo.svg" alt="logo">
                 <div>
@@ -109,24 +110,25 @@
                     <i class="fa-brands fa-instagram-square"></i>
                 </div>
             </div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pircing</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About Us</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Carrers</a></li>
-                <li><a href="#">Community</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-            </ul>
-            <div class="form_copy">
-                <form action="">
-                    <input type="email" name="email" id="email" placeholder="Updates in yout inbox...">
-                    <button type="submit">Go</button>
-                </form>
-                <p>Copyright 2020. All Rights Reserved</p>
-            </div>  
+            <div class="linkList">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Pircing</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Carrers</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <form action="">
+                <input type="email" name="email" id="email" placeholder="Updates in yout inbox...">
+                <button type="submit">Go</button>
+            </form>
+        </div>
+        <p>Copyright 2020. All Rights Reserved</p>
     </footer>
 </body>
 </html>
