Agregar puntos en Testimony

--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
                     <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can't stop recommending them to everyone i talk to!”</p>
                 </div>
             </div>
+            <div class="puntos">
+                <i class="fa-regular fa-circle"></i>
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-regular fa-circle"></i>
+                <i class="fa-regular fa-circle"></i>
+            </div>
             <button class="cta_getStarted">Get Started</button>
         </section>
 
