Agregar icono de Copyright

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <button type="submit">Go</button>
             </form>
         </div>
-        <p>Copyright 2020. All Rights Reserved</p>
+        <p>&#169 Copyright 2020. All Rights Reserved</p>
     </footer>
 </body>
 </html>
