Agregando los 3 puntos de los testimonios y cambiar el icono del menú

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Manage</title>
 </head>
+
 <body>
     <header>
         <img src="img/logo.svg" alt="logo">
@@ -21,14 +25,15 @@
             </ul>
         </nav>
         <button class="cta_getStarted">Get Started</button>
-        <img class="bars" src="img/bars-solid.svg" alt="">
+        <i class="fas fa-bars"></i>
     </header>
 
     <main>
         <section class="hero">
             <div>
                 <h2>Bring everyone together to build better products.</h2>
-                <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the large team goals in view </p>
+                <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the large team goals
+                    in view </p>
                 <button class="cta_getStarted">Get Started</button>
             </div>
             <img src="img/illustration-intro.svg" alt="illustration-intro">
@@ -42,31 +47,20 @@
             </div>
             <div class="itemlist">
                 <div class="item">
-                    <div>
-                        <span>01</span>
-                    </div>
-                    <div>
-                        <h4>Track company-wide progress</h4>
-                        <p>See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
-                    </div>
+                    <h4>Track company-wide progress</h4>
+                    <p>See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the
+                        milestone level all the way done to the smallest of details. Never lose sight of the bigger
+                        picture again.</p>
                 </div>
                 <div class="item">
-                    <div>
-                        <span>02</span>
-                    </div>
-                    <div>
-                        <h4>Advance built-in reports</h4>
-                        <p>Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
-                    </div>
+                    <h4>Advance built-in reports</h4>
+                    <p>Set internal delivery estimates and track progress toward company goals. Our customisable
+                        dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
                 </div>
                 <div class="item">
-                    <div>
-                        <span>03</span>
-                    </div>
-                    <div>
-                        <h4>Everything you need in one place</h4>
-                        <p>Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
-                    </div>
+                    <h4>Everything you need in one place</h4>
+                    <p>Stop jumping from one service to another to communicate, store files, track tasks and share
+                        documents. Manage offers an all-in-one team productivity solution.</p>
                 </div>
             </div>
         </section>
@@ -77,17 +71,20 @@
                 <div class="card">
                     <img src="img/avatar-anisha.png" alt="avatar-anisha">
                     <h5>Anisha Li</h5>
-                    <p>“Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                    <p>“Manage has supercharged our team's workflow. The ability to maintain visibility on larger
+                        milestones at all times keeps everyone motivated.”</p>
                 </div>
                 <div class="card">
                     <img src="img/avatar-ali.png" alt="avatar-ali">
                     <h5>Ali Bravo</h5>
-                    <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
+                    <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more
+                        cross-channel confusion and everyone is much more focused.”</p>
                 </div>
                 <div class="card">
                     <img src="img/avatar-richard.png" alt="avatar-richard">
                     <h5>Richard Watts</h5>
-                    <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can't stop recommending them to everyone i talk to!”</p>
+                    <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can't
+                        stop recommending them to everyone i talk to!”</p>
                 </div>
             </div>
             <div class="puntos">
@@ -137,4 +134,5 @@
         <p>&#169 Copyright 2020. All Rights Reserved</p>
     </footer>
 </body>
+
 </html>
