Agregando los 3 puntos de los testimonios y cambiar el icono del menú

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </section>
 
         <section class="banner">
-            <h2>Simplify hoy your team words today.</h2>
+            <h2>Simplify hoy your team <br>words today.</h2>
             <button class="cta_getStarted2">Get Started</button>
         </section>
     </main>
