Agregar detalles finales

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <button class="cta_getStarted">Get Started</button>
-        <div><i class="fas fa-bars"></i>/div>
+        <div><i class="fas fa-bars"></i></div>
     </header>
 
     <main>
